Make overflow fix global

--- a/website/static/sass/mutation.sass
+++ b/website/static/sass/mutation.sass
@@ -1,6 +1,3 @@
-#content
-  overflow: hidden
-
 .header-panel
   margin-bottom: 10px
 
