--- a/website/static/sass/style.sass
+++ b/website/static/sass/style.sass
@@ -3,6 +3,7 @@
 #content
   position: relative
   clear: both
+  overflow: hidden
 
 footer
   margin-top: 50px
